--- a/css/style.css
+++ b/css/style.css
@@ -283,7 +283,7 @@ nav ul li a:hover {
 }
 .footer_company_detail {
   display: flex;
-  gap: 200px;
+  gap: 110px;
 }
 .company_name {
   font-size: 18px;
@@ -300,7 +300,7 @@ nav ul li a:hover {
   
 }
 .email_phone {
-  margin: 25px 0;
+  margin: 0 50px;
   line-height: 1.5;
   font-size: 15px;
 }
